assets/css/style.css
@font-face {
	font-family: 'Noto Sans';
	font-weight: 400;
	font-style: normal;
	src: url("../fonts/Noto-Sans-regular/Noto-Sans-regular.eot");
	src: url("../fonts/Noto-Sans-regular/Noto-Sans-regular.eot?#iefix") format("embedded-opentype"), local("Noto Sans"), local("Noto-Sans-regular"), url("../fonts/Noto-Sans-regular/Noto-Sans-regular.woff2") format("woff2"), url("../fonts/Noto-Sans-regular/Noto-Sans-regular.woff") format("woff"), url("../fonts/Noto-Sans-regular/Noto-Sans-regular.ttf") format("truetype"), url("../fonts/Noto-Sans-regular/Noto-Sans-regular.svg#NotoSans") format("svg")
}

@font-face {
	font-family: 'Noto Sans';
	font-weight: 700;
	font-style: normal;
	src: url("../fonts/Noto-Sans-700/Noto-Sans-700.eot");
	src: url("../fonts/Noto-Sans-700/Noto-Sans-700.eot?#iefix") format("embedded-opentype"), local("Noto Sans Bold"), local("Noto-Sans-700"), url("../fonts/Noto-Sans-700/Noto-Sans-700.woff2") format("woff2"), url("../fonts/Noto-Sans-700/Noto-Sans-700.woff") format("woff"), url("../fonts/Noto-Sans-700/Noto-Sans-700.ttf") format("truetype"), url("../fonts/Noto-Sans-700/Noto-Sans-700.svg#NotoSans") format("svg")
}

@font-face {
	font-family: 'Noto Sans';
	font-weight: 400;
	font-style: italic;
	src: url("../fonts/Noto-Sans-italic/Noto-Sans-italic.eot");
	src: url("../fonts/Noto-Sans-italic/Noto-Sans-italic.eot?#iefix") format("embedded-opentype"), local("Noto Sans Italic"), local("Noto-Sans-italic"), url("../fonts/Noto-Sans-italic/Noto-Sans-italic.woff2") format("woff2"), url("../fonts/Noto-Sans-italic/Noto-Sans-italic.woff") format("woff"), url("../fonts/Noto-Sans-italic/Noto-Sans-italic.ttf") format("truetype"), url("../fonts/Noto-Sans-italic/Noto-Sans-italic.svg#NotoSans") format("svg")
}

@font-face {
	font-family: 'Noto Sans';
	font-weight: 700;
	font-style: italic;
	src: url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.eot");
	src: url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.eot?#iefix") format("embedded-opentype"), local("Noto Sans Bold Italic"), local("Noto-Sans-700italic"), url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.woff2") format("woff2"), url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.woff") format("woff"), url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.ttf") format("truetype"), url("../fonts/Noto-Sans-700italic/Noto-Sans-700italic.svg#NotoSans") format("svg")
}

.highlight table td {
	padding: 5px
}

.highlight table pre {
	margin: 0
}

.highlight .cm {
	color: #999988;
	font-style: italic
}

.highlight .cp {
	color: #999999;
	font-weight: bold
}

.highlight .c1 {
	color: #999988;
	font-style: italic
}

.highlight .cs {
	color: #999999;
	font-weight: bold;
	font-style: italic
}

.highlight .c,
.highlight .cd {
	color: #999988;
	font-style: italic
}

.highlight .err {
	color: #e3d2d2
}

.highlight .gd {
	color: #e8e6e3;
	background-color: #470000
}

.highlight .ge {
	color: #e8e6e3;
	font-style: italic
}

.highlight .gr {
	color: #aa0000
}

.highlight .gh {
	color: #999999
}

.highlight .gi {
	color: #e8e6e3;
	background-color: #124700
}

.highlight .go {
	color: #888888
}

.highlight .gp {
	color: #61ffff
}

.highlight .gs {
	font-weight: bold
}

.highlight .gu {
	color: #aaaaaa
}

.highlight .gt {
	color: #aa0000
}

.highlight .kc {
	color: #e8e6e3;
	font-weight: bold
}

.highlight .kd {
	color: #e8e6e3;
	font-weight: bold
}

.highlight .kn {
	color: #e8e6e3;
	font-weight: bold
}

.highlight .kp {
	color: #e8e6e3;
	font-weight: bold
}

.highlight .kr {
	color: #e8e6e3;
	font-weight: bold
}

.highlight .kt {
	color: #8ba6c5;
	font-weight: bold
}

.highlight .k,
.highlight .kv {
	color: #e8e6e3;
	font-weight: bold
}

.highlight .mf {
	color: #009999
}

.highlight .mh {
	color: #009999
}

.highlight .il {
	color: #009999
}

.highlight .mi {
	color: #61ffff
}

.highlight .mo {
	color: #009999
}

.highlight .m,
.highlight .mb,
.highlight .mx {
	color: #61ffff
}

.highlight .sb {
	color: #d14
}

.highlight .sc {
	color: #d14
}

.highlight .sd {
	color: #d14
}

.highlight .s2 {
	color: #ef3564
}

.highlight .se {
	color: #ef3564
}

.highlight .sh {
	color: #d14
}

.highlight .si {
	color: #d14
}

.highlight .sx {
	color: #d14
}

.highlight .sr {
	color: #009926
}

.highlight .s1 {
	color: #ef3564;
}

.highlight .ss {
	color: #990073
}

.highlight .s {
	color: #ef3564
}

.highlight .na {
	color: #72ffff
}

.highlight .bp {
	color: #999999
}

.highlight .nb {
	color: #72ffff
}

.highlight .nc {
	color: #445588;
	font-weight: bold
}

.highlight .no {
	color: #72FFFF
}

.highlight .nd {
	color: #3c5d5d;
	font-weight: bold
}

.highlight .ni {
	color: #800080
}

.highlight .ne {
	color: #ff6161;
	font-weight: bold
}

.highlight .nf {
	color: #ff6161;
	font-weight: bold
}

.highlight .nl {
	color: #ff6161;
	font-weight: bold
}

.highlight .nn {
	color: #b2aca2
}

.highlight .nt {
	color: #7Faeff
}

.highlight .vc {
	color: #008080
}

.highlight .vg {
	color: #008080
}

.highlight .vi {
	color: #008080
}

.highlight .nv {
	color: #72ffff
}

.highlight .ow {
	color: #000000;
	font-weight: bold
}

.highlight .o {
	color: #e8e6e3;
	font-weight: bold
}

.highlight .w {
	color: #bbbbbb
}

.highlight {
	background-color: rgb(20, 22, 23);
	border-radius: 7px;
	overflow-x: scroll;
}

html {
	min-height: 100%;
	background: url("/assets/img/bg.png");
	background-size: cover;
	background-attachment: fixed;
	box-shadow: inset 0 0 0 4000px rgba(24, 26, 27, 0.9);
}

body {
	background: rgba(0, 0, 0, 0);
	padding: 50px;
	font: 15px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
	color: #a0988b;
	font-weight: 400
}

h1,
h2,
h3,
h4,
h5,
h6,
strong {
	color: #d3cfc9;
	margin: 0 0 20px;
	clear: both;
}

p,
ul,
ol,
table,
pre,
dl {
	margin: 0 0 20px
}

h1,
h2,
h3 {
	line-height: 1.1
}

h1 {
	font-size: 28px
}

h2 {
	color: #C4BFB7
}

h3,
h4,
h5,
h6 {
	color: #bab4ab
}

a {
	color: #53a3dc;
	text-decoration: none
}

a:hover,
a:focus {
	color: #069;
}

a small {
	font-size: 11px;
	color: #777;
	margin-top: -0.3em;
	display: block
}

a:hover small {
	color: #777
}

.wrapper {
	width: 1080px;
	margin: 0 auto
}

blockquote {
	border-left: 2px solid #e5e5e5;
	margin: 20px;
	margin-left: 0px;
	padding: 15px 15px 5px 20px;
	font-style: italic;
	background-color: #00527a;
	color: #e5e5e5;
	border-radius: 2px;
}

code,
pre {
	font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
	color: #f8f8f8
}

pre {
	padding: 4px 4px 0px 4px;
	background: rgb(20, 22, 23);
	border-radius: 5px;
	scrollbar-color: #5f5f5f #373c3e;
	scrollbar-width: thin;
	white-space: pre;       /* Since CSS 2.1 */
    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
    white-space: -pre-wrap;      /* Opera 4-6 */
    white-space: -o-pre-wrap;    /* Opera 7 */
    word-wrap: break-word;       /* Internet Explorer 5.5+ */
}

pre.lineno{
	color: #444;
}
/**
table {
	width: 100%;
	border-collapse: collapse
}

th,
td {
	text-align: left;
	padding: 5px 10px;
}

dt {
	color: #444;
	font-weight: 700
}

th {
	color: #444
}
**/

img {
	max-width: 100%;
	display:block;
	margin: 0 auto 0 auto;
}

kbd {
	background-color: #fafbfc;
	border: 1px solid #c6cbd1;
	border-bottom-color: #959da5;
	border-radius: 3px;
	box-shadow: inset 0 -1px 0 #959da5;
	color: #444d56;
	display: inline-block;
	font-size: 11px;
	line-height: 10px;
	padding: 3px 5px;
	vertical-align: middle
}

header {
	width: 270PX;
	float: left;
	position: fixed;
	-webkit-font-smoothing: subpixel-antialiased;
	box-shadow: 1px 1px 5px #0f0f0f;
	padding: 20px;
	background-color: #181a1b;
	border-radius: 15px;
}

ul.downloads {
	list-style: none;
	height: 40px;
	padding: 0;
	background: #f4f4f4;
	border-radius: 5px;
	border: 1px solid #e0e0e0;
	width: 270px
}

.downloads li {
	width: 89px;
	float: left;
	border-right: 1px solid #e0e0e0;
	height: 40px
}

.downloads li:first-child a {
	border-radius: 5px 0 0 5px
}

.downloads li:last-child a {
	border-radius: 0 5px 5px 0
}

.downloads a {
	line-height: 1;
	font-size: 11px;
	color: #676767;
	display: block;
	text-align: center;
	padding-top: 6px;
	height: 34px
}

.downloads a:hover,
.downloads a:focus {
	color: #675C5C;
}

.downloads ul a:active {
	background-color: #f0f0f0
}

strong {
	color: #222;
	font-weight: 700
}

.downloads li+li+li {
	border-right: none;
	width: 89px
}

.downloads a strong {
	font-size: 14px;
	display: block;
	color: #222
}

section {
	width: 700px;
	float: right;
	box-shadow: 1px 1px 5px #0f0f0f;
	padding: 20px;
	padding-bottom: 50px;
	margin-bottom: 50px;
	background-color: #181a1b;
	border-radius: 10px;
}
nav {
	width: 270PX;
	float: left;
	position: fixed;
	margin-top: 450px;
	-webkit-font-smoothing: subpixel-antialiased;
	padding: 20px;
	border-radius: 15px;
	text-align: right;
}

nav a{
	color: #d3cfc9;
}

li {
	list-style-type: none;
}

small {
	font-size: 11px
}

hr {
	border: 0;
	background: #e5e5e5;
	height: 1px;
	margin: 0 0 20px
}

footer {
	width: 270px;
	float: left;
	position: fixed;
	bottom: 50px;
	-webkit-font-smoothing: subpixel-antialiased
}

@media print,
screen and (max-width: 960px) {
	div.wrapper {
		width: auto;
		margin: 0
	}

	header,
	section,
	footer {
		float: none;
		position: static;
		width: auto
	}

	header {
		padding-right: 320px
	}

	section {
		border: 1px solid #e5e5e5;
		border-width: 1px 0;
		padding: 20px 0;
		margin: 0 0 20px
	}

	header a small {
		display: inline
	}

	header ul {
		position: absolute;
		right: 50px;
		top: 52px
	}
}

@media print,
screen and (max-width: 720px) {
	body {
		word-wrap: break-word
	}

	header {
		padding: 0
	}

	header ul,
	header p.view {
		position: static
	}

	pre,
	code {
		word-wrap: normal
	}
}

@media print,
screen and (max-width: 480px) {
	body {
		padding: 15px
	}

	.downloads {
		width: 99%
	}

	.downloads li,
	.downloads li+li+li {
		width: 33%
	}
}

@media print {
	body {
		padding: 0.4in;
		font-size: 12pt;
		color: #444
	}
}

